test/parser/type/malformed_error.exp
Error: Unexpected token `1`, expected start of type
test/parser/type/malformed_error.myte:3:7
 3 | val x: 1 = 1;
   |        ^